[package]

name = "immix_rust"
version = "0.0.1"
authors = [ "Yi Lin <yi.lin@anu.edu.au>" ]
build = "build.rs"

[build-dependencies]
cc = "1.0"
flp-compiler = { path = "../../flp-compiler" }

[lib]
name = "immix_rust"
path = "src/lib.rs"
crate-type = ["dylib"]

[[bin]]
name = "immix-rust"
path = "src/main.rs"

[features]
exhaust = []
initobj = []
mt-gcbench = ["mt-trace"]
gcbench = ["mt-trace"]
mark = []
trace = []
linked-list = []
leakme = []
testme = []

mt-trace = []

[dependencies]
flp-framework = { path = "../../flp-framework" }
time = "0.1.34"
memmap = "0.2.2"
libc = "0.2.2"
lazy_static = "0.1.15"
log = { version = "0.4", features = [] }
aligned_alloc = "0.1.2"
crossbeam = "0.2.8"
simple_logger = "0.4.0"
backtrace = "0.3.40"
rand = "0.6"

