[package]

name = "immix_rust"
version = "0.0.1"

# Original author shown here:
authors = [ "Yi Lin <yi.lin@anu.edu.au>" ]
build = "build.rs"

[build-dependencies]
cc = "1.0"
flp-compiler = { path = "../../flp-compiler" }

[lib]
name = "immix_rust"
path = "src/lib.rs"
crate-type = ["dylib"]

[[bin]]
name = "immix-rust"
path = "src/main.rs"

[features]
exhaust = []
initobj = []
mt-gcbench = ["mt-trace"]
gcbench = ["mt-trace"]
mark = []
trace = []
linked-list = []
leakme = []
testme = []

mt-trace = []

[dependencies]
flp-framework = { path = "../../flp-framework" }
time = "0.2.16"
memmap = "0.7.0"
libc = "0.2.71"
lazy_static = "1.4.0"
log = { version = "0.4.8", features = [] }
aligned_alloc = "0.1.3"
crossbeam = "0.7.3"
simple_logger = "1.6.0"
backtrace = "0.3.48"
rand = "0.7.3"

